helm-charts/infra/crossplane-managed-resources/eks-clusters/matesito/hola-eks-cluster/01-networking/10-route-table-private-c.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: matesito--route-private-c
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: matesito--nat-gw-c
    region: us-west-1
    routeTableIdRef:
      name: matesito--route-table-private-c
    tags:
      Name: matesito--route-private-c
  providerConfigRef:
    name: aws
